--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -74,5 +74,54 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="VXs-cS-e7p">
+            <objects>
+                <viewController id="jhN-uh-UJv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jHD-op-Uz8"/>
+                        <viewControllerLayoutGuide type="bottom" id="ril-Re-MxA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YzP-zR-ulj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Nd-ng-Koz">
+                                <rect key="frame" x="160.5" y="152" width="55" height="30"/>
+                                <state key="normal" title="LEVEL 1"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="Q7w-i5-pmH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f2R-7f-pbj">
+                                <rect key="frame" x="159.5" y="318.5" width="57" height="30"/>
+                                <state key="normal" title="LEVEL 2"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="5jt-q9-v0U"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pV8-fT-Frj">
+                                <rect key="frame" x="158.5" y="485.5" width="58" height="30"/>
+                                <state key="normal" title="LEVEL 3"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="f2R-7f-pbj" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" id="DEi-Dh-bUe"/>
+                            <constraint firstItem="2Nd-ng-Koz" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" multiplier="0.5" id="HNw-QC-9FM"/>
+                            <constraint firstItem="pV8-fT-Frj" firstAttribute="centerX" secondItem="YzP-zR-ulj" secondAttribute="centerX" id="RT3-6F-jvo"/>
+                            <constraint firstItem="f2R-7f-pbj" firstAttribute="centerX" secondItem="YzP-zR-ulj" secondAttribute="centerX" id="Re5-KE-Fl8"/>
+                            <constraint firstItem="pV8-fT-Frj" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" multiplier="1.5" id="anZ-3C-DxJ"/>
+                            <constraint firstItem="2Nd-ng-Koz" firstAttribute="centerX" secondItem="YzP-zR-ulj" secondAttribute="centerX" id="lbV-wJ-DCT"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="seg-yp-dEQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-631.20000000000005" y="138.98050974512745"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="5jt-q9-v0U"/>
+    </inferredMetricsTieBreakers>
 </document>
