--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
                                     <constraint firstAttribute="width" constant="180" id="sYJ-Vr-eBd"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImS-Wg-am9" userLabel="questionCount">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImS-Wg-am9" userLabel="questionCount">
                                 <rect key="frame" x="166.5" y="39.5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -143,6 +143,11 @@
                             <constraint firstItem="kR3-Xf-vgH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xNf-iP-cvG"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="zPR-FC-3zR"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="ImS-Wg-am9"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="answerTableView" destination="dDo-ad-t0B" id="z08-T8-5QU"/>
