added navigation controller, cleaned up code

--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -34,19 +34,19 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.0087729168779999995" green="0.015778338789999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="30" id="aOL-yi-O0Q" customClass="AnswerTableViewCell" customModule="SPAPP" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="30" id="aOL-yi-O0Q" customClass="AnswerTableViewCell" customModule="SPAPP" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="282" height="30"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aOL-yi-O0Q" id="YNb-ur-G5y">
                                             <rect key="frame" x="0.0" y="0.0" width="282" height="30"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YqB-ol-TAq">
-                                                    <rect key="frame" x="21" y="-49.5" width="240" height="128"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YqB-ol-TAq">
+                                                    <rect key="frame" x="0.0" y="2" width="282" height="25.5"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <color key="tintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nl-dT-F9H">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nl-dT-F9H">
                                                     <rect key="frame" x="14.5" y="2.5" width="254" height="25.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -185,7 +185,7 @@
                                     <constraint firstAttribute="width" constant="190" id="iLJ-vI-gtV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="38"/>
-                                <state key="normal" title="FACTS"/>
+                                <state key="normal" title="GENERAL"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="segue_to_level_one" id="Q7w-i5-pmH"/>
                                 </connections>
@@ -220,15 +220,28 @@
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="segue_to_level_three" id="Phe-gJ-L6b"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o29-wG-ZNz">
+                                <rect key="frame" x="320" y="621" width="46" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="SfZ-kC-aMd"/>
+                                    <constraint firstAttribute="width" secondItem="o29-wG-ZNz" secondAttribute="height" multiplier="1:1" id="rAJ-H2-xca"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="KDb-gq-gac" kind="show" id="E5v-wr-9lc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="f2R-7f-pbj" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" id="DEi-Dh-bUe"/>
+                            <constraint firstAttribute="trailing" secondItem="o29-wG-ZNz" secondAttribute="trailing" constant="9" id="GrM-NG-cRy"/>
                             <constraint firstItem="2Nd-ng-Koz" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" multiplier="0.5" id="HNw-QC-9FM"/>
                             <constraint firstItem="pV8-fT-Frj" firstAttribute="centerX" secondItem="YzP-zR-ulj" secondAttribute="centerX" id="RT3-6F-jvo"/>
                             <constraint firstItem="f2R-7f-pbj" firstAttribute="centerX" secondItem="YzP-zR-ulj" secondAttribute="centerX" id="Re5-KE-Fl8"/>
                             <constraint firstItem="pV8-fT-Frj" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" multiplier="1.5" id="anZ-3C-DxJ"/>
                             <constraint firstItem="2Nd-ng-Koz" firstAttribute="centerX" secondItem="YzP-zR-ulj" secondAttribute="centerX" id="lbV-wJ-DCT"/>
+                            <constraint firstItem="ril-Re-MxA" firstAttribute="top" secondItem="o29-wG-ZNz" secondAttribute="bottom" id="lyl-xk-oL9"/>
                         </constraints>
                     </view>
                     <connections>
@@ -240,6 +253,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="seg-yp-dEQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-631.20000000000005" y="138.98050974512745"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="FmH-tj-gs0">
+            <objects>
+                <viewController id="muH-aN-hIc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wDA-Hd-Twu"/>
+                        <viewControllerLayoutGuide type="bottom" id="5sr-Mx-MET"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KyJ-pI-ilr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="MuB-29-2Cr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dl9-d5-AbT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-292" y="847.82608695652175"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="OA8-WA-Ggq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KDb-gq-gac" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="c5Z-OR-s7c">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="muH-aN-hIc" kind="relationship" relationship="rootViewController" id="9s3-De-kZY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hvm-Bo-Cd7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-945" y="847"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="495-op-2ip">
+            <objects>
+                <viewController id="uG2-Zq-2qf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FmP-8S-L8H"/>
+                        <viewControllerLayoutGuide type="bottom" id="OiA-kk-D9c"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rrK-m1-hK4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IBw-35-yxw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
